fix (theme) - adjust contrast

--- a/src/App.css
+++ b/src/App.css
@@ -6081,7 +6081,7 @@ body {
   .location__icon {
     color: #ffffff;
     font-size: 80px;
-    opacity: 0.1; }
+    opacity: 0.2; }
 
 @media only screen and (min-width: 992px) {
   .location {
@@ -6090,14 +6090,10 @@ body {
     padding-top: 20px;
     margin-bottom: 50px; }
     .location__heading {
-      font-weight: 300;
-      letter-spacing: 10px;
       transform: translateY(100px);
       margin-right: 100px; }
     .location__icon {
-      color: #ffffff;
-      font-size: 160px;
-      opacity: 0.1; } }
+      font-size: 160px; } }
 
 @media only screen and (min-width: 992px) {
   .forecast {
