--- a/src/styles/_location.scss
+++ b/src/styles/_location.scss
@@ -11,7 +11,7 @@
     &__icon {
         color: $white;
         font-size: 80px;
-        opacity: 0.1;
+        opacity: 0.2;
     }
 }
 
@@ -23,16 +23,12 @@
         margin-bottom: 50px;
 
         &__heading {
-            font-weight: 300;
-            letter-spacing: 10px;
             transform: translateY(100px);
             margin-right: 100px;
         }
 
         &__icon {
-            color: $white;
             font-size: 160px;
-            opacity: 0.1;
         }
     }
 }
